Refactor biomes and update dependencies
Updated biome handling logic to use validBiomesStrings for better compatibility and management. Updated logging statements for improved clarity. Incremented plugin version to 1.7.3 and added new dependencies in plugin.yml and build.gradle to ensure compatibility with recent updates.